--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,13 @@
 
       </main>
       </div>
-      <footer class="footer text-center animated fadeInUpBig">Unofficial Metrics Dashboard for <a href="http://www.shopify.com/partners" target="_blank">Shopify Partners</a>. Originally created by <a href="http://www.forsbergplustwo.com" target="_blank">FORSBERG+two</a>.<br/>Please submit any feedback or issues on <a href="https://github.com/forsbergplustwo/partner-metrics-for-shopify/issues" target="blank">GitHub</a></footer>
+      <footer class="footer text-center animated fadeInUpBig"
+        <div class="row">
+          <div class="col-xs-12">
+            Unofficial Metrics Dashboard for <a href="http://www.shopify.com/partners" target="_blank">Shopify Partners</a>. Originally created by <a href="http://www.forsbergplustwo.com" target="_blank">FORSBERG+two</a>.<br/>Please submit any feedback or issues on <a href="https://github.com/forsbergplustwo/partner-metrics-for-shopify/issues" target="blank">GitHub</a>
+          </div>
+        </div
+      </footer>
 
 
     <script>
