--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,8 +33,8 @@
 
  .footer {
    position: relative;
-   margin-top: -80px; /* negative value of footer height */
-   height: 80px;
+   margin-top: -90px; /* negative value of footer height */
+   height: 90px;
    clear:both;
    padding-top:20px;
  }
@@ -50,9 +50,7 @@
    margin-top:15px;
  }
  .navbar-btn {
-   margin-top: 11px;
-   margin-bottom: 8px;
-   margin-right: 15px;
+   margin: 11px 15px 8px;
  }
 
  .navbar-inverse {
@@ -123,7 +121,7 @@
    text-align: center
  }
  h3 small, .h3 .small {
-   font-size: 60%;
+   font-size: 50%;
    margin-right: 10px;
    color: #C3CFD8;
  }
@@ -155,3 +153,13 @@
    background: #fff;
    text-transform: uppercase;
  }
+
+ /* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
+  #filter_form, #filter_form .form-group {
+    width: 100%;
+  }
+  #filter_form .form-control {
+    margin-bottom: 10px;
+  }
+}
