--- a/app/views/home/_chart_tile.html.erb
+++ b/app/views/home/_chart_tile.html.erb
@@ -50,7 +50,7 @@
           <h3><%= number_to_currency_with_precision(value) %></h3>
           <% end %>
         </div>
-        <div class="<%= column_size %> text-center">
+<!--         <div class="<%= column_size %> text-center">
           <h5>Weekly Avg</h5>
           <% value = metric_value / @period * 7 %>
           <% if @chart_tile["display"] == "number" %>
@@ -61,6 +61,7 @@
           <h3><%= number_to_currency_with_precision(value) %></h3>
           <% end %>
         </div>
+-->
       <% else %>
       <% column_size = "col-xs-6 col-sm-3"%>
       <% end %>
