Fixes issue on datepicker firing change events too early, and datepicker positioning

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,6 +29,8 @@
  #main {
    overflow:auto;
    padding-bottom:80px; /* this needs to be bigger than footer height*/
+   padding-top: 65px;
+   margin-top: 0px;
  }
 
  .footer {
