AppHistory model Import CSV bits in the UI Importing the model

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,7 +22,10 @@
             <p class="navbar-btn">
               <!-- Button trigger modal -->
               <button type="button" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#myModal">
-                Import Data
+                Import Payments
+              </button>
+              <button type="button" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#importAppHistoryModal">
+                Import App History
               </button>
             </p>
         </li>
