--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
             <div class="modal-content text-center">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Import Data</h4>
+                <h4 class="modal-title" id="myModalLabel">Import Payments</h4>
               </div>
               <div class="modal-body">
                 <div class="row">
@@ -54,6 +54,45 @@
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                   <% end %>
                 </div>
+              </div>
+            </div>
+          </div>
+
+
+        <div class="modal fade" id="importAppHistoryModal" tabindex="-1" role="dialog" aria-labelledby="importAppHistoryModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content text-center">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="importAppHistoryModalLabel">Import App History</h4>
+              </div>
+              <div class="modal-body">
+                <div class="row">
+                  <div class="col-xs-12">
+                    <p>Select your "AppHistory" CSV file exported from your Shopify Partner Dashboard</p>
+                    <%= form_tag(import_app_history_path, remote: true, multipart: true, id: "import_app_history_form", class: "top-buffer") do %>
+                      <span class="btn btn-primary btn-file">
+                        Select File<%= file_field_tag "file", onchange: "$('#import_app_history_form').submit();" %>
+                      </span>
+                        </div>
+                        </div>
+                        <div class="row top-buffer">
+                          <div class="col-xs-12 col-md-6 col-md-offset-3">
+                            <div id="import_progress" style="display: none;" class="animated fadeIn">
+                              <div class="progress">
+                                <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                  <span>Importing..</span>
+                                </div>
+                              </div>
+                              <p>This might be a good time to put the kettle on</p>
+                            </div>
+                          </div>
+                        </div>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <% end %>
+                  </div>
               </div>
             </div>
           </div>
