delimiter support for large plain numbers

--- a/app/views/home/_metric_tile.html.erb
+++ b/app/views/home/_metric_tile.html.erb
@@ -6,7 +6,7 @@
       <div class="panel-body">
         <div class="col-xs-6">
           <% if tile["display"] == "number" %>
-          <h2><%= metric_value %></h2>
+          <h2><%= number_with_delimiter(metric_value, delimeter: ',') %></h2>
           <% elsif tile["display"] == "percentage" %>
           <h2><%= number_to_percentage(metric_value, precision: 2) %></h2>
           <% else %>
