Disable Turbolinks 5 page transition preview. Stops double animation/flash when revisting cached page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= content_for?(:title) ? yield(:title) : "Partner Metrics" %></title>
   <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Partner Metrics" %>">
+  <meta name="turbolinks-cache-control" content="no-preview">
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
