Update styling to be more in line with Polaris

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,13 +17,33 @@
  *= require_self
  */
 
+ $brand-danger: #e83c19;
+ $brand-success: #47c1bf;
+ $brand-primary: #5c6ac4;
+
+ @import "bootstrap";
 
  html, body {
-   height: 100%;
+    height: 100%;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
  }
 
  #wrap {
    min-height: 100%;
+ }
+
+ .index #wrap {
+  height: 100vh;
+  overflow: hidden;
+  color: #fff;
+  background: rgba(49,55,61,1);
+  background: -moz-linear-gradient(top, rgba(49,55,61,1) 0%, rgba(49,55,61,1) 68%, rgba(17,17,17,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(49,55,61,1)), color-stop(68%, rgba(49,55,61,1)), color-stop(100%, rgba(17,17,17,1)));
+  background: -webkit-linear-gradient(top, rgba(49,55,61,1) 0%, rgba(49,55,61,1) 68%, rgba(17,17,17,1) 100%);
+  background: -o-linear-gradient(top, rgba(49,55,61,1) 0%, rgba(49,55,61,1) 68%, rgba(17,17,17,1) 100%);
+  background: -ms-linear-gradient(top, rgba(49,55,61,1) 0%, rgba(49,55,61,1) 68%, rgba(17,17,17,1) 100%);
+  background: linear-gradient(to bottom, rgba(49,55,61,1) 0%, rgba(49,55,61,1) 68%, rgba(17,17,17,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#31373d', endColorstr='#111111', GradientType=0 );
  }
 
  #main {
@@ -35,18 +55,38 @@
 
  .footer {
    position: relative;
-   margin-top: -90px; /* negative value of footer height */
-   height: 90px;
+   margin-top: -70px; /* negative value of footer height */
+   height: 70px;
    clear:both;
    padding-top:20px;
+ }
+ .index .footer {
+  display: none;
  }
 
 
  /* Align a bit with Shopify Admin */
  body {
-   background-color: #EBEEF0;
-   color: #798C9C;
+   background-color: #f4f6f8;
+   color: #212b35;
 
+ }
+ a {
+  color: #007ACE;
+ }
+ .container {
+
+  position: relative;
+ }
+ #heading_row {
+  z-index: 2;
+  position: relative;
+ }
+ .alert-danger a,
+ .alert-danger a:hover {
+   color: #a94442;
+   font-weight: bold;
+   text-decoration: underline;
  }
  .top-buffer {
    margin-top:15px;
@@ -63,98 +103,179 @@
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
   color: #FFF;
   background-color: #272C30 !important;
-  }
-  .navbar-inverse .navbar-nav > li > a {
-    color: #96A7B6;
-  }
+}
+.navbar-inverse .navbar-nav > li > a {
+  color: #96A7B6;
+}
+.navbar-login {
+    width: 305px;
+    padding: 10px;
+    padding-bottom: 0px;
+}
 
-  .btn-file {
-    position: relative;
-    overflow: hidden;
-  }
-  .btn-file input[type=file] {
-      position: absolute;
-      top: 0;
-      right: 0;
-      min-width: 100%;
-      min-height: 100%;
-      font-size: 100px;
-      text-align: right;
-      filter: alpha(opacity=0);
-      opacity: 0;
-      outline: none;
-      background: white;
-      cursor: inherit;
-      display: block;
-  }
+.navbar-login-session {
+    padding: 10px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+}
 
- .well {
-   background: #fff;
- }
- h1,h2, h3, .h1, .h2, .h3 {
-   font-weight: 300;
- }
- h4, h5, h6, .h4, .h5, .h6 {
-   font-weight: 400;
- }
- h1, .h1 {
-   font-size: 42px;
- }
- h2, .h2 {
-   font-size: 42px;
-   color: #479CCF;
- }
- h2.main-metric {
-   font-weight: 500;
- }
+.btn-file {
+  position: relative;
+  overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
 
- .panel h2, .panel .h2 {
-   margin-top: 15px;
-   margin-bottom: 15px;
-   line-height: 52px;
- }
- #chart_tile h3 {
-   margin-top: 10px;
- }
- .panel h3, .panel .h3 {
-   font-size: 26px;
-   line-height: 22px;
-   text-transform: uppercase;
-   text-align: center
- }
- h3 small, .h3 .small {
-   font-size: 50%;
-   margin-right: 10px;
-   color: #C3CFD8;
- }
+.well {
+ background: #fff;
+}
+h1,h2, h3, .h1, .h2, .h3 {
+ font-weight: 200;
+ letter-spacing: 1px;
+}
+h4, h5, h6, .h4, .h5, .h6 {
+ font-weight: 400;
+}
+h1, .h1 {
+ font-size: 42px;
+}
+h2, .h2 {
+ font-size: 42px;
+ color: #5c6ac4;
+}
+h2.main-metric {
+ font-weight: 500;
+}
 
- h4, .h4 {
-   color: #798C9C;
-   text-transform: uppercase;
- }
+.panel h2, .panel .h2 {
+ margin-top: 15px;
+ margin-bottom: 15px;
+ line-height: 52px;
+ font-weight: 300;
+}
+#chart_tile h2 {
+  font-weight: 400;
+}
+#chart_tile h3 {
+ margin-top: 10px;
+}
+.panel h3, .panel .h3 {
+ font-size: 24px;
+ line-height: 22px;
+ text-transform: uppercase;
+ text-align: center
+}
+h3 small, .h3 .small {
+ font-size: 50%;
+ margin-right: 10px;
+ color: #C3CFD8;
+}
 
- h5, .h5 {
-   color: #C3CFD8;
-   text-transform: uppercase;
- }
+h4, .h4 {
+ color: #798C9C;
+ text-transform: uppercase;
+}
 
- #filter_form {
-   margin-top: 2em;
- }
+h5, .h5 {
+ color: #C3CFD8;
+ text-transform: uppercase;
+ font-weight: 300;
+}
 
- .btn-primary, .submit {
-   background-color: #479CCF;
- }
- .text-success {
-   color: #96BF48;
- }
- .text-danger {
-   color: #FF5D5D;
- }
- .panel-footer {
-   background: #fff;
-   text-transform: uppercase;
- }
+#filter_form {
+ margin-top: 2em;
+}
+
+#app_title{
+max-width: 295px;
+}
+
+.btn-primary, .submit {
+ background-color: #5c6ac4;
+}
+.text-success {
+ color: #96BF48;
+}
+.text-danger {
+ color: #FF5D5D;
+}
+.panel-footer {
+ background: #fff;
+ text-transform: uppercase;
+}
+.directUpload .progress {
+max-width: 600px;
+margin:    0.2em 0 0.2em 0;
+}
+
+.directUpload .progress .bar {
+  height:  1.2em;
+  padding-left: 0.2em;
+  color:   white;
+  display: none;
+}
+
+.index #title {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.index #by-line {
+  margin-top: 30px;
+  margin-bottom: 45px;
+  color: #798C9C;
+}
+
+/* Button outline styles */
+.btn-outline {
+    background-color: transparent;
+    color: inherit;
+    transition: all .5s;
+}
+
+.btn-primary.btn-outline {
+    color: #428bca;
+}
+
+.btn-success.btn-outline {
+    color: #5cb85c;
+}
+
+.btn-info.btn-outline {
+    color: #5bc0de;
+}
+
+.btn-warning.btn-outline {
+    color: #f0ad4e;
+}
+
+.btn-danger.btn-outline {
+    color: #d9534f;
+}
+.btn-danger:hover {
+  background-color: #e83c19;
+  border-color: #e83c19;
+}
+
+.btn-primary.btn-outline:hover,
+.btn-success.btn-outline:hover,
+.btn-info.btn-outline:hover,
+.btn-warning.btn-outline:hover,
+.btn-danger.btn-outline:hover {
+    color: #fff;
+}
 
  /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
@@ -163,5 +284,15 @@
   }
   #filter_form .form-control {
     margin-bottom: 10px;
+  }
+}
+@media only screen and (max-width : 480px) {
+  .index h1 {
+    font-size: 32px;
+  }
+}
+@media only screen and (max-width : 360px) {
+  .index h1 {
+    font-size: 28px;
   }
 }
