--- a/app/views/home/onetime.html.erb
+++ b/app/views/home/onetime.html.erb
@@ -13,23 +13,26 @@
   </div>
 
   <div class="row">
-    <div class="col-sm-12 col-md-6">
+    <div class="col-sm-12">
       <div class="panel panel-default animated fadeIn">
         <div class="panel-body">
-          <%= pie_chart Metric.where(charge_type: "onetime_revenue", metric_date: @date_last..@date).group(:app_title).sum(:revenue) %>
+          <%= column_chart Metric.where(
+              charge_type: "onetime_revenue",
+              metric_date: 12.months.ago..@date
+          ).group(:app_title).sum(:revenue) %>
         </div>
         <div class="panel-footer text-center">
-          <h5>Revenue Split</h5>
+          <h5>One-Time Revenue (Last 12 Months)</h5>
         </div>
       </div>
     </div>
-    <div class="col-sm-12 col-md-6">
+    <div class="col-sm-12">
       <div class="panel panel-default animated fadeIn">
         <div class="panel-body">
-          <%= column_chart Metric.where(charge_type: "onetime_revenue").group(:app_title).sum(:revenue) %>
+          <%= pie_chart Metric.where(charge_type: "onetime_revenue", metric_date: 12.months.ago..@date).group(:app_title).sum(:revenue) %>
         </div>
         <div class="panel-footer text-center">
-          <h5>All Time Revenue</h5>
+          <h5>One-Time Split (Last 12 Months)</h5>
         </div>
       </div>
     </div>
