--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,17 @@
  $brand-success: #47c1bf;
  $brand-primary: #5c6ac4;
 
+ @import "bootstrap-sprockets";
  @import "bootstrap";
+
+ @font-face{
+   font-family:'Glyphicons Halflings';
+   src: image-url("bootstrap/glyphicons-halflings-regular.eot");
+   src: image-url("bootstrap/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"),
+        image-url("bootstrap/glyphicons-halflings-regular.woff") format("woff"),
+        image-url("bootstrap/glyphicons-halflings-regular.ttf") format("truetype"),
+        image-url("bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg")
+ }
 
  html, body {
     height: 100%;
