--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,9 @@
  $brand-danger: #e83c19;
  $brand-success: #47c1bf;
  $brand-primary: #5c6ac4;
+ $state-success-text: #405352;
+ $state-success-bg: #B7ECEC;
+ $state-success-border: #47C1BF;
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
@@ -84,6 +87,9 @@
  a {
   color: #007ACE;
  }
+ a:hover {
+  color: #084E8A;
+ }
  .container {
 
   position: relative;
@@ -92,9 +98,29 @@
   z-index: 2;
   position: relative;
  }
+ .alert {
+   color: #212b36;
+   background-color: #f4f6f8;
+   box-shadow: inset 0 3px 0 0 #637381, inset 0 0 0 0 transparent, 0 0 0 1px rgba(63,63,68,.05), 0 1px 3px 0 rgba(63,63,68,.15);
+   padding: 24px;
+   border: 0;
+   border-radius: 0 0 3px 3px;
+   -webkit-transition: box-shadow .2s cubic-bezier(.64,0,.35,1);
+   transition: box-shadow .2s cubic-bezier(.64,0,.35,1);
+ }
+ .alert.alert-success {
+   color: #405352;
+   background-color: #e0f5f5;
+   box-shadow: inset 0 3px 0 0 #47c1bf, inset 0 0 0 0 transparent, 0 0 0 1px rgba(63,63,68,.05), 0 1px 3px 0 rgba(63,63,68,.15);
+ }
+ .alert.alert-danger {
+   color: #583C35;
+   background-color: #fbeae5;
+   box-shadow: inset 0 3px 0 0 #ed6347, inset 0 0 0 0 transparent, 0 0 0 1px rgba(63,63,68,.05), 0 1px 3px 0 rgba(63,63,68,.15);
+ }
  .alert-danger a,
  .alert-danger a:hover {
-   color: #a94442;
+   color: #583C35;
    font-weight: bold;
    text-decoration: underline;
  }
@@ -127,26 +153,6 @@
     padding: 10px;
     padding-bottom: 0px;
     padding-top: 0px;
-}
-
-.btn-file {
-  position: relative;
-  overflow: hidden;
-}
-.btn-file input[type=file] {
-    position: absolute;
-    top: 0;
-    right: 0;
-    min-width: 100%;
-    min-height: 100%;
-    font-size: 100px;
-    text-align: right;
-    filter: alpha(opacity=0);
-    opacity: 0;
-    outline: none;
-    background: white;
-    cursor: inherit;
-    display: block;
 }
 
 .well {
@@ -285,6 +291,46 @@ margin:    0.2em 0 0.2em 0;
 .btn-warning.btn-outline:hover,
 .btn-danger.btn-outline:hover {
     color: #fff;
+}
+
+.file-area {
+  width: 100%;
+  position: relative;
+
+  input[type=file] {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    cursor: pointer;
+  }
+
+  .file-dummy {
+    width: 100%;
+    padding: 30px;
+    background: #F4F6F8;
+    border: 2px dashed #DFE4E8;
+    border-radius: 5px;
+    text-align: center;
+    transition: background 0.3s ease-in-out;
+
+    .success {
+      display: none;
+    }
+  }
+
+  p {
+    margin-bottom: 0;
+  }
+
+  input[type=file]:focus + .file-dummy {
+    outline: none !important;
+  }
+
 }
 
  /* Small Devices, Tablets */
