--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,46 +36,45 @@
               </div>
               <div class="modal-body">
                 <div class="row">
-                  <div class="col-xs-12">
-                    <p>Select your "PaymentHistory" CSV file exported from your Shopify Partner Dashboard</p>
+                    <div class="col-xs-12">
+                      <p>In your Shopify Partners Dashboard, click the <b>Export payouts as csv</b> link on the <b>Payouts</b> page. You'll then be emailed the file you need.</p>
                       <%= form_tag(import_path, remote: true, multipart: true, id: "import_form", class: "top-buffer") do %>
-                      <span class="btn btn-primary btn-file">
-                        Select File<%= file_field_tag "file", onchange: "$('#import_form').submit();" %>
-                      </span>
-                    </div>
-                  </div>
-                  <div class="row top-buffer">
-                    <div class="col-xs-12 col-md-6 col-md-offset-3">
-                      <div id="import_progress" style="display: none;" class="animated fadeIn">
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                            <span>Importing..</span>
+                      <div class="file-area">
+                          <%= file_field_tag "file", onchange: "$('#import_form').submit();" %>
+                          <div class="file-dummy">
+                              <span id="import_text" class="default">Drop ZIP file here, or click to select</span>
+                              <div id="import_progress" style="display: none;">
+                                <div class="progress">
+                                  <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                    <span>Importing..</span>
+                                  </div>
+                                </div>
+                                <p>This might be a good time to make that cup of coffee</p>
+                              </div>
                           </div>
-                        </div>
-                        <p>This might be a good time to make that cup of coffee</p>
                       </div>
                     </div>
-                  </div>
                 </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  <% end %>
-                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <% end %>
               </div>
             </div>
           </div>
-
         </div>
 
-      </main>
       </div>
-      <footer class="footer text-center animated fadeInUpBig"
-        <div class="row">
-          <div class="col-xs-12">
-            Unofficial Metrics Dashboard for <a href="http://www.shopify.com/partners" target="_blank">Shopify Partners</a>. Originally created by <a href="http://www.forsbergplustwo.com" target="_blank">FORSBERG+two</a>.<br/>Please submit any feedback or issues on <a href="https://github.com/forsbergplustwo/partner-metrics-for-shopify/issues" target="blank">GitHub</a>
-          </div>
-        </div
-      </footer>
+
+    </main>
+    </div>
+    <footer class="footer text-center animated fadeInUpBig"
+      <div class="row">
+        <div class="col-xs-12">
+          Unofficial Metrics Dashboard for <a href="http://www.shopify.com/partners" target="_blank">Shopify Partners</a>. Originally created by <a href="http://www.forsbergplustwo.com" target="_blank">FORSBERG+two</a>.<br/>Please submit any feedback or issues on <a href="https://github.com/forsbergplustwo/partner-metrics-for-shopify/issues" target="blank">GitHub</a>
+        </div>
+      </div
+    </footer>
 
 
     <script>
@@ -96,6 +95,7 @@
 
     var toggleLoading;
     toggleLoading = function() {
+      $("#import_text").hide();
       $("#import_progress").show();
     };
 
