--- a/app/views/home/recurring.html.erb
+++ b/app/views/home/recurring.html.erb
@@ -26,13 +26,23 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-12">
+    <div class="col-sm-6">
       <div class="panel panel-default animated fadeIn">
         <div class="panel-body">
           <%= pie_chart Metric.where(charge_type: "recurring_revenue", metric_date: 12.months.ago..@date).group(:app_title).sum(:revenue) %>
         </div>
         <div class="panel-footer text-center">
           <h5>Recurring Split (Last 12 Months)</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="panel panel-default animated fadeIn">
+        <div class="panel-body">
+          <%= pie_chart PaymentHistory.where(charge_type: "recurring_revenue", payment_date: 12.months.ago..@date).group(:shop_country).sum(:revenue) %>
+        </div>
+        <div class="panel-footer text-center">
+          <h5>Revenue per Country (Last 12 Months)</h5>
         </div>
       </div>
     </div>
